@@ -1,3 +1,6 @@
+18 April 2019: Wouter
+	- travis build file.
+
 16 April 2019: Wouter
 	- Better braces in if statement in TCP fastopen code.
 	- iana portlist updated.
